[package]
name = "cmd"
version = "0.0.1"
license = "Apache-2.0"
edition = "2018"
publish = false
default-run = "tikv-server"

[features]
tcmalloc = ["tikv/tcmalloc"]
jemalloc = ["tikv/jemalloc"]
mimalloc = ["tikv/mimalloc"]
portable = ["tikv/portable"]
sse = ["tikv/sse"]
mem-profiling = ["tikv/mem-profiling"]
failpoints = ["tikv/failpoints"]
protobuf-codec = [
  "backup/protobuf-codec",
  "grpcio/protobuf-codec",
  "keys/protobuf-codec",
  "kvproto/protobuf-codec",
  "pd_client/protobuf-codec",
  "raft/protobuf-codec",
  "raftstore/protobuf-codec",
  "tikv/protobuf-codec",
  "txn_types/protobuf-codec",
  "cdc/protobuf-codec",
]
prost-codec = [
  "backup/prost-codec",
  "grpcio/prost-codec",
  "keys/prost-codec",
  "kvproto/prost-codec",
  "pd_client/prost-codec",
  "raft/prost-codec",
  "raftstore/prost-codec",
  "tikv/prost-codec",
  "txn_types/prost-codec",
  "cdc/prost-codec",
]

[lib]
name = "cmd"

[[bin]]
name = "tikv-server"

[[bin]]
name = "tikv-ctl"

[dependencies]
backup = { path = "../components/backup", default-features = false }
cdc = { path = "../components/cdc" }
chrono = "0.4"
clap = "2.32"
encryption = { path = "../components/encryption" }
engine = { path = "../components/engine" }
engine_rocks = { path = "../components/engine_rocks" }
engine_traits = { path = "../components/engine_traits" }
fs2 = "0.4"
futures = "0.1"
futures-cpupool = "0.1"
grpcio = { version = "0.5", default-features = false, features = ["openssl-vendored"] }
hex = "0.4"
keys = { path = "../components/keys" }
kvproto = { git = "https://github.com/pingcap/kvproto.git", default-features = false }
libc = "0.2"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
nix = "0.11"
pd_client = { path = "../components/pd_client" }
prometheus = { version = "0.8", features = ["nightly", "push"] }
protobuf = "2.8"
raft = { version = "0.6.0-alpha", default-features = false }
raftstore = { path = "../components/raftstore" }
rand = "0.7"
serde_json = "1.0"
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "0e23a5baff302a9d7bccd85f8f31e43339c2f2c1" }
tikv = { path = "../", default-features = false }
tikv_util = { path = "../components/tikv_util" }
toml = "0.4"
txn_types = { path = "../components/txn_types" }
vlog = "0.1.4"

[dependencies.yatp]
git = "https://github.com/tikv/yatp.git"

[target.'cfg(unix)'.dependencies]
signal = "0.6"
