[package]
name = "cmd"
version = "0.0.1"
license = "Apache-2.0"
edition = "2018"
publish = false
default-run = "tikv-server"

[features]
tcmalloc = ["tikv/tcmalloc"]
jemalloc = ["tikv/jemalloc"]
mimalloc = ["tikv/mimalloc"]
portable = ["tikv/portable"]
sse = ["tikv/sse"]
mem-profiling = ["tikv/mem-profiling"]
failpoints = ["tikv/failpoints"]
protobuf-codec = [
  "backup/protobuf-codec",
  "grpcio/protobuf-codec",
  "keys/protobuf-codec",
  "kvproto/protobuf-codec",
  "pd_client/protobuf-codec",
  "raft/protobuf-codec",
  "raftstore/protobuf-codec",
  "tikv/protobuf-codec",
  "txn_types/protobuf-codec",
  "cdc/protobuf-codec",
  "raft_log_engine/protobuf-codec"
]
prost-codec = [
  "backup/prost-codec",
  "grpcio/prost-codec",
  "keys/prost-codec",
  "kvproto/prost-codec",
  "pd_client/prost-codec",
  "raft/prost-codec",
  "raftstore/prost-codec",
  "tikv/prost-codec",
  "txn_types/prost-codec",
  "cdc/prost-codec",
  "raft_log_engine/prost-codec"
]
test-engines-rocksdb = ["tikv/test-engines-rocksdb"]
test-engines-panic = ["tikv/test-engines-panic"]

[lib]
name = "cmd"

[[bin]]
name = "tikv-server"

[[bin]]
name = "tikv-ctl"

[dependencies]
backup = { path = "../components/backup", default-features = false }
cdc = { path = "../components/cdc" }
chrono = "0.4"
crossbeam = "0.7"
tempfile = "3.0"
clap = "2.32"
concurrency_manager = { path = "../components/concurrency_manager" }
encryption = { path = "../components/encryption" }
engine_rocks = { path = "../components/engine_rocks" }
engine_traits = { path = "../components/engine_traits" }
error_code = { path = "../components/error_code" }
file_system = { path = "../components/file_system" }
fs2 = "0.4"
futures = "0.3"
tokio = { version = "0.2", features = ["rt-threaded"] }
grpcio = { version = "0.7", default-features = false, features = ["openssl-vendored"] }
hex = "0.4"
keys = { path = "../components/keys" }
kvproto = { git = "https://github.com/pingcap/kvproto.git", default-features = false }
libc = "0.2"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
log_wrappers = { path = "../components/log_wrappers" }
nix = "0.11"
pd_client = { path = "../components/pd_client" }
prometheus = { version = "0.10", features = ["nightly"] }
promptly = "0.3.0"
protobuf = "2.8"
raft = { version = "0.6.0-alpha", default-features = false }
raft_log_engine = { path = "../components/raft_log_engine" }
raftstore = { path = "../components/raftstore" }
resolved_ts = { path = "../components/resolved_ts" }
rand = "0.7"
security = { path = "../components/security" }
serde_json = "1.0"
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
tikv = { path = "../", default-features = false }
tikv_alloc = { path = "../components/tikv_alloc" }
tikv_util = { path = "../components/tikv_util" }
collections = { path = "../components/collections" }
toml = "0.5"
txn_types = { path = "../components/txn_types" }
vlog = "0.1.4"
yatp = { git = "https://github.com/tikv/yatp.git", branch = "master" }

[build-dependencies]
time = "0.1"

[target.'cfg(unix)'.dependencies]
signal = "0.6"
