[package]
name = "tikv_fuzz"
version = "0.0.1"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies.tikv]
path = ".."
[dependencies.libfuzzer-sys]
git = "https://github.com/rust-fuzz/libfuzzer-sys.git"

[[bin]]
name = "codec_bytes"
path = "fuzz_targets/codec_bytes.rs"

[[bin]]
name = "codec_number"
path = "fuzz_targets/codec_number.rs"

[[bin]]
name = "coprocessor_codec_mysql_decimal"
path = "fuzz_targets/coprocessor/codec/mysql/decimal.rs"
