[package]
name = "fuzz"
version = "0.0.1"
publish = false
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "fuzz"
path = "cli.rs"

[dependencies]
anyhow = "1.0"
cargo_metadata = "0.9"
clap = { version = "3.1.6", default-features = false, features = ["std", "derive"] }
lazy_static = "1.3"
regex = "1.1"
