[package]
name = "gen-proxy-ffi"
version = "0.1.0"
authors = ["Tong Zhigao <tongzhigao@pingcap.com>"]
edition = "2018"

[lib]
name = "gen_proxy_ffi_lib"
path = "src/lib.rs"

[[bin]]
name = "gen_proxy_ffi"
path = "bin.rs"

[dependencies.bindgen]
version = ""
default-features = false
# features = ["which-rustfmt"]

[dependencies]
walkdir = "2"
# md5 = ""
clap = ""
