[package]
name = "gen-proxy-ffi"
version = "0.1.0"
authors = ["Tong Zhigao <tongzhigao@pingcap.com>"]
edition = "2018"

[lib]
name = "gen_proxy_ffi_lib"
path = "src/lib.rs"

[[bin]]
name = "gen_proxy_ffi"
path = "bin.rs"
# features = ["which-rustfmt"]

[dependencies]
bindgen = { version = "0.57.0", default-features = true }
# md5 = ""
clap = "2.33.0"
walkdir = "2"
