[package]
name = "mock-engine-store"
version = "0.0.1"
license = "Apache-2.0"
edition = "2018"
publish = false

[lib]
name = "mock_engine_store"

[features]
default = ["protobuf-codec"]
protobuf-codec = [
  "protobuf/bytes",
  "kvproto/protobuf-codec",
]

[dependencies]
engine_rocks = { path = "../components/engine_rocks", default-features = false }
engine_test = { path = "../components/engine_test", default-features = false }
engine_traits = { path = "../components/engine_traits", default-features = false }
fail = "0.5"
keys = { path = "../components/keys", default-features = false }
kvproto = { git = "https://github.com/pingcap/kvproto.git", default-features = false }
protobuf = "2.8.0"
raftstore = { path = "../components/raftstore", default-features = false }
server = { path = "../components/server" }
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
tikv_util = { path = "../components/tikv_util", default-features = false }
