[package]
name = "new-mock-engine-store"
version = "0.0.1"
license = "Apache-2.0"
edition = "2018"
publish = false

[lib]
name = "new_mock_engine_store"

[features]
default = ["protobuf-codec"]
protobuf-codec = [
  "protobuf/bytes",
  "kvproto/protobuf-codec",
]

[dependencies]
api_version = { path = "../components/api_version", default-features = false }
collections = { path = "../components/collections" }
concurrency_manager = { path = "../components/concurrency_manager", default-features = false }
crossbeam = "0.8"
encryption = { path = "../components/encryption", default-features = false }
encryption_export = { path = "../components/encryption/export", default-features = false }
engine_rocks = { path = "../components/engine_rocks", default-features = false }
engine_store_ffi = { path = "../components/engine_store_ffi", default-features = false }
engine_test = { path = "../components/engine_test", default-features = false }
engine_tiflash = { path = "../engine_tiflash", default-features = false }
engine_traits = { path = "../components/engine_traits", default-features = false }
fail = "0.5"
file_system = { path = "../components/file_system", default-features = false }
futures = { version = "0.3", features = ["thread-pool", "compat"] }
keys = { path = "../components/keys", default-features = false }
kvproto = { git = "https://github.com/pingcap/kvproto.git", default-features = false }

lazy_static = "1.3"
log_wrappers = { path = "../components/log_wrappers" }
pd_client = { path = "../components/pd_client", default-features = false }
protobuf = "2.8.0"
proxy_server = { path = "../components/proxy_server" }
raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
raftstore = { path = "../components/raftstore", default-features = false }
rand = "0.8"
resource_metering = { path = "../components/resource_metering" }
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
tempfile = "3.0"
test_pd_client = { path = "../components/test_pd_client" }
test_raftstore = { path = "../components/test_raftstore" }
test_util = { path = "../components/test_util", default-features = false }
tikv = { path = "../.", default-features = false }
tikv_util = { path = "../components/tikv_util", default-features = false }
