[package]
name = "new-mock-engine-store"
version = "0.0.1"
license = "Apache-2.0"
edition = "2018"
publish = false

[lib]
name = "new_mock_engine_store"

[features]
default = ["protobuf-codec"]
protobuf-codec = [
  "protobuf/bytes",
  "kvproto/protobuf-codec",
]

[dependencies]
api_version = { workspace = true, default-features = false }
causal_ts = { workspace = true }
collections = { workspace = true }
concurrency_manager = { workspace = true, default-features = false }
crossbeam = "0.8"
encryption = { workspace = true, default-features = false }
encryption_export = { workspace = true, default-features = false }
engine_rocks = { workspace = true, default-features = false }
engine_store_ffi = { workspace = true, default-features = false }
engine_test = { workspace = true, default-features = false }
engine_tiflash = { workspace = true, default-features = false }
engine_traits = { workspace = true, default-features = false }
fail = "0.5"
file_system = { workspace = true, default-features = false }
futures = { version = "0.3", features = ["thread-pool", "compat"] }
grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
grpcio-health = { version = "0.10", default-features = false, features = ["protobuf-codec"] }
keys = { workspace = true, default-features = false }
kvproto = { git = "https://github.com/pingcap/kvproto.git", default-features = false }

lazy_static = "1.3"
log_wrappers = { workspace = true }
pd_client = { workspace = true, default-features = false }
protobuf = "2.8.0"
proxy_server = { workspace = true }
raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
raftstore = { workspace = true, default-features = false }
rand = "0.8"
resolved_ts = { workspace = true }
resource_metering = { workspace = true }
security = { workspace = true, default-features = false }
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
tempfile = "3.0"
test_pd_client = { workspace = true }
test_raftstore = { workspace = true }
test_util = { workspace = true, default-features = false }
tikv = { workspace = true, default-features = false }
tikv_util = { workspace = true, default-features = false }
tokio = { version = "1.5", features = ["rt-multi-thread"] }
tokio-timer = { git = "https://github.com/tikv/tokio", branch = "tokio-timer-hotfix" }
txn_types = { workspace = true, default-features = false }
