[package]
name = "proxy_server"
version = "0.0.1"
license = "Apache-2.0"
edition = "2018"
publish = false

[features]
tcmalloc = ["tikv/tcmalloc"]
jemalloc = ["tikv/jemalloc"]
mimalloc = ["tikv/mimalloc"]
snmalloc = ["tikv/snmalloc"]
portable = ["tikv/portable"]
sse = ["tikv/sse"]
mem-profiling = ["tikv/mem-profiling"]
failpoints = ["tikv/failpoints"]

cloud-aws = ["encryption_export/cloud-aws"]
cloud-gcp = ["encryption_export/cloud-gcp"]
cloud-azure = ["encryption_export/cloud-azure"]
test-engine-kv-rocksdb = [
  "tikv/test-engine-kv-rocksdb"
]
test-engine-raft-raft-engine = [
  "tikv/test-engine-raft-raft-engine"
]
test-engines-rocksdb = [
  "tikv/test-engines-rocksdb",
]
test-engines-panic = [
  "tikv/test-engines-panic",
]
nortcheck = ["engine_rocks/nortcheck"]
backup-stream-debug = ["backup-stream/backup-stream-debug"]

[dependencies]
api_version = { workspace = true }
async-stream = "0.2"
backup = { workspace = true, default-features = false }
backup-stream = { workspace = true, default-features = false }
causal_ts = { workspace = true }
chrono = "0.4"
clap = "2.32"
collections = { workspace = true }
concurrency_manager = { workspace = true, default-features = false }
crossbeam = "0.8"
encryption = { workspace = true, default-features = false }
encryption_export = { workspace = true, default-features = false }
engine_rocks = { workspace = true, default-features = false }
engine_rocks_helper = { workspace = true }
engine_store_ffi = { workspace = true, default-features = false }
engine_traits = { workspace = true, default-features = false }
error_code = { workspace = true, default-features = false }
fail = "0.5"
file_system = { workspace = true, default-features = false }
fs2 = "0.4"
futures = "0.3"
grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored"] }
grpcio-health = { version = "0.10", default-features = false, features = ["protobuf-codec"] }
hex = "0.4"
hyper = { version = "0.14", features = ["full"] }
itertools = "0.10"
keys = { workspace = true, default-features = false }
kvproto = { git = "https://github.com/pingcap/kvproto.git" }
lazy_static = "1.3"
libc = "0.2"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
log_wrappers = { workspace = true }
mime = "0.3.13"
nix = "0.23"
online_config = { workspace = true }

openssl = "0.10"
pd_client = { workspace = true, default-features = false }
pin-project = "1.0"
pprof = { git = "https://github.com/tikv/pprof-rs.git", rev = "3fed55af8fc6cf69dbd954a0321c799c5a111e4e", default-features = false, features = ["flamegraph", "protobuf-codec"] }
prometheus = { version = "0.13", features = ["nightly"] }
protobuf = { version = "2.8", features = ["bytes"] }
raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
raft_log_engine = { workspace = true, default-features = false }
raftstore = { workspace = true, default-features = false }
rand = "0.8"
regex = "1.3"
resolved_ts = { workspace = true, default-features = false }
resource_metering = { workspace = true }
security = { workspace = true, default-features = false }
serde = "1.0"
serde_derive = "1.0"
serde_ignored = "0.1"
serde_json = "1.0"
serde_with = "1.4"
server = { workspace = true, default-features = false }
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
tempfile = "3.0"
tikv = { workspace = true, default-features = false }
tikv_alloc = { workspace = true }
tikv_util = { workspace = true, default-features = false }
tokio = { version = "1.5", features = ["rt-multi-thread"] }
tokio-openssl = "0.6"
toml = "0.5"
txn_types = { workspace = true, default-features = false }
url = "2"
yatp = { git = "https://github.com/tikv/yatp.git", branch = "master" }

[target.'cfg(unix)'.dependencies]
signal = "0.6"
